src/objects/Process__c.object
<CustomObject>
    <description>This is a master object in Quality Central.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Val1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This needs to be deleted.</description>
        <label>Defect</label>
        <referenceTo>Defect__c</referenceTo>
        <relationshipLabel>Processes</relationshipLabel>
        <relationshipName>Standard_Operational_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Site</label>
        <referenceTo>Manufacturing_Site__c</referenceTo>
        <relationshipName>Standard_Operational_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipName>Standard_Operational_Processes_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Classification__c</fullName>
        <label>Process Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Val1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Code__c</fullName>
        <label>Process Code</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Process_Description__c</fullName>
        <label>Process Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Process_Quality__c</fullName>
        <label>Process Quality</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <label>Revision</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Operational Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UDF__c</fullName>
        <label>UDF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Process</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Process_Description__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Manufacturing_Site__c</columns>
        <columns>Process_Quality__c</columns>
        <columns>Process_Classification__c</columns>
        <columns>Type__c</columns>
        <columns>Process_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>